...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

        <LinearLayout
            android:id="@+id/columnLayout_Scrolling_LinearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

...
            app:headerLayout="@layout/activity_drawer_header"
            app:menu="@menu/actions_toolbar" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_Scrolling_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:visibility="gone"
...
