<resources>
    <string name="Address">Address</string>
    <string name="Price">Price</string>
    <string name="app_name">AppArt</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="email_reset">Enter your email address</string>
    <string name="reset_button">Reset password</string>
    <string name="login_failed_snack">Login failed !</string>
...
    <string name="dialog_username">username</string>
    <string name="dialog_email">Email address:</string>
    <string name="dialog_close">Close</string>

    <!-- VirtualTourActivity stuff -->
    <string name="action_account">Account</string>
    <string name="action_logout">Log Out</string>
    <string name="action_map">Map</string>

    <!-- Strings for User Profile UI -->
    <string name="uniAccountClaimer">  UNI account  </string>
    <string name="backButtonText"> BACK </string>
    <string name="editProfileButtonText"> Edit profile </string>
...
