...
      app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="@dimen/ic_padding"/>


    <Button
      android:id="@+id/login_Login_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/style_primary"
      android:layout_marginStart="@dimen/margin_button"
      android:layout_marginEnd="@dimen/margin_button"
      android:onClick="logIn"
...
